--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- import freeCodeCamp testing bundle -->
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
